--- a/src/less/main.less
+++ b/src/less/main.less
@@ -31,3 +31,13 @@
  */
 
 @import 'variables.less';
+
+.table td.tdRight {
+  text-align: right;
+}
+.table td.tdCenter {
+  text-align: center;
+}
+.table-nonfluid {
+   width: auto;
+}
