--- a/src/app/partials/product.tpl.html
+++ b/src/app/partials/product.tpl.html
@@ -11,7 +11,7 @@
 
 				<tr class="well">
 					<td class="tdRight" colspan="3" >
-						<a href="index.html#/cart" title="go to shopping cart" ng-disabled="cart.getTotalCount() < 1">
+						<a href="javascript:;" ui-sref="cart" title="go to shopping cart" ng-disabled="cart.getTotalCount() < 1">
 							<i class="icon-shopping-cart" />
 							<b>{{cart.getTotalCount()}}</b> items, <b>{{cart.getTotalPrice() | currency}}</b>
 							<span ng-show="cart.getTotalCount(product.sku) > 0"><br />this item is in the cart</span>
@@ -36,7 +36,7 @@
 
 				<tr class="well">
 					<td class="tdRight" colspan="3" >
-						<a href="index.html#/cart" title="go to shopping cart" ng-disabled="cart.getTotalCount() < 1">
+						<a href="javascript:;" ui-sref="cart" title="go to shopping cart" ng-disabled="cart.getTotalCount() < 1">
 							<i class="icon-shopping-cart" />
 							<b>{{cart.getTotalCount()}}</b> items, <b>{{cart.getTotalPrice() | currency}}</b>
 							<span ng-show="cart.getTotalCount(product.sku) > 0"><br />this item is in the cart</span>
