--- a/src/app/partials/store.tpl.html
+++ b/src/app/partials/store.tpl.html
@@ -11,7 +11,7 @@
 <table class="table table-bordered">
 	<tr class="well">
 		<td class="tdRight" colspan="4" >
-			<a href="index.html#/cart" title="go to shopping cart" ng-disabled="cart.getTotalCount() < 1">
+			<a href="javascript:;" ui-sref="cart" title="go to shopping cart" ng-disabled="cart.getTotalCount() < 1">
 				<i class="icon-shopping-cart" />
 				<b>{{cart.getTotalCount()}}</b> items, <b>{{cart.getTotalPrice() | currency}}</b>
 			</a>
@@ -20,7 +20,7 @@
 	<tr ng-repeat="product in store.products | orderBy:'name' | filter:search" >
 		<td class="tdCenter"><img ng-src="assets/img/products/{{product.sku | lowercase}}.jpg" alt="{{product.name}}" /></td>
 		<td>
-			<a href="#/products/{{product.sku}}"><b>{{product.name}}</b></a><br />
+			<a href="javascript:;" ui-sref="product({productSku: product.sku})"><b>{{product.name}}</b></a><br />
 			{{product.description}}
 		</td>
 		<td class="tdRight">
@@ -34,7 +34,7 @@
 	</tr>
 	<tr class="well">
 		<td class="tdRight" colspan="4">
-			<a href="index.html#/cart" title="go to shopping cart" ng-disabled="cart.getTotalCount() < 1">
+			<a href="javascript:;" ui-sref="cart" title="go to shopping cart" ng-disabled="cart.getTotalCount() < 1">
 				<i class="icon-shopping-cart" />
 				<b>{{cart.getTotalCount()}}</b> items, <b>{{cart.getTotalPrice() | currency}}</b>
 			</a>
