--- a/src/app/partials/cart.tpl.html
+++ b/src/app/partials/cart.tpl.html
@@ -5,81 +5,81 @@
 	go back to the store, clear the cart, or check out.
 </p>
 
-<div class="container-fluid">
-	<div class="row-fluid">
-		<div class="span8">
 
-			<!-- items -->
-			<table class="table table-bordered">
+<div class="row-fluid">
+	<div class="col-md-8">
 
-				<!-- header -->
-				<tr class="well">
-					<td><b>Item</b></td>
-					<td class="tdCenter"><b>Quantity</b></td>
-					<td class="tdRight"><b>Price</b></td>
-					<td />
-				</tr>
+		<!-- items -->
+		<table class="table table-bordered">
 
-				<!-- empty cart message -->
-				<tr ng-hide="cart.getTotalCount() > 0" >
-					<td class="tdCenter" colspan="4">
-						Your cart is empty.
-					</td>
-				</tr>
+			<!-- header -->
+			<tr class="well">
+				<td><b>Item</b></td>
+				<td class="tdCenter"><b>Quantity</b></td>
+				<td class="tdRight"><b>Price</b></td>
+				<td />
+			</tr>
 
-				<!-- cart items -->
-				<tr ng-repeat="item in cart.items | orderBy:'name'">
-					<td>{{item.name}}</td>
-					<td class="tdCenter">
-					  <div class="input-append">
-						<!-- use type=tel instead of  to prevent spinners -->
-						<input
-							class="span3 text-center" type="tel" 
-							ng-model="item.quantity" 
-							ng-change="cart.saveItems()" />
-						<button 
-							class="btn btn-success" type="button" 
-							ng-disabled="item.quantity >= 1000"
-							ng-click="cart.addItem(item.sku, item.name, item.price, +1)">+</button>
-						<button 
-							class="btn btn-inverse" type="button" 
-							ng-disabled="item.quantity <= 1"
-							ng-click="cart.addItem(item.sku, item.name, item.price, -1)">-</button>
-					  </div>
-					</td>
-					<td class="tdRight">{{item.price * item.quantity | currency}}</td>
-					<td class="tdCenter" title="remove from cart">
-						<a href="" ng-click="cart.addItem(item.sku, item.name, item.price, -10000000)" >
-							<i class="icon-remove" />
-						</a>
-					</td>
-				</tr>
+			<!-- empty cart message -->
+			<tr ng-hide="cart.getTotalCount() > 0" >
+				<td class="tdCenter" colspan="4">
+					Your cart is empty.
+				</td>
+			</tr>
 
-				<!-- footer -->
-				<tr class="well">
-					<td><b>Total</b></td>
-					<td class="tdCenter"><b>{{cart.getTotalCount()}}</b></td>
-					<td class="tdRight"><b>{{cart.getTotalPrice() | currency}}</b></td>
-					<td />
-				</tr>
-			</table>
-		</div>
+			<!-- cart items -->
+			<tr ng-repeat="item in cart.items | orderBy:'name'">
+				<td>{{item.name}}</td>
+				<td class="tdCenter">
+				  <div class="input-append">
+					<!-- use type=tel instead of  to prevent spinners -->
+					<input
+						class="span3 text-center" type="tel" 
+						ng-model="item.quantity" 
+						ng-change="cart.saveItems()" />
+					<button 
+						class="btn btn-success" type="button" 
+						ng-disabled="item.quantity >= 1000"
+						ng-click="cart.addItem(item.sku, item.name, item.price, +1)">+</button>
+					<button 
+						class="btn btn-inverse" type="button" 
+						ng-disabled="item.quantity <= 1"
+						ng-click="cart.addItem(item.sku, item.name, item.price, -1)">-</button>
+				  </div>
+				</td>
+				<td class="tdRight">{{item.price * item.quantity | currency}}</td>
+				<td class="tdCenter" title="remove from cart">
+					<a href="" ng-click="cart.addItem(item.sku, item.name, item.price, -10000000)" >
+						<i class="icon-remove" />
+					</a>
+				</td>
+			</tr>
 
-		<!-- buttons -->
-		<div class="span4">
-			<p class="text-info">
-				<button 
-					class="btn btn-block" 
-					onclick="window.location.href='index.html'">
-					<i class="icon-chevron-left" /> back to store
-				</button>
-				<button 
-					class="btn btn-block btn-danger" 
-					ng-click="cart.clearItems()" 
-					ng-disabled="cart.getTotalCount() < 1" >
-					<i class="icon-trash icon-white" /> clear cart
-				</button>
-			</p>
-		</div>
+			<!-- footer -->
+			<tr class="well">
+				<td><b>Total</b></td>
+				<td class="tdCenter"><b>{{cart.getTotalCount()}}</b></td>
+				<td class="tdRight"><b>{{cart.getTotalPrice() | currency}}</b></td>
+				<td />
+			</tr>
+		</table>
+	</div>
+
+	<!-- buttons -->
+	<div class="col-md-4">
+		<p class="text-info">
+			<button 
+				class="btn btn-block" 
+				onclick="window.location.href='index.html'">
+				<i class="icon-chevron-left" /> back to store
+			</button>
+			<button 
+				class="btn btn-block btn-danger" 
+				ng-click="cart.clearItems()" 
+				ng-disabled="cart.getTotalCount() < 1" >
+				<i class="icon-trash icon-white" /> clear cart
+			</button>
+		</p>
 	</div>
 </div>
+
